testutils/test/generated_ingresses/multiple_wildcard_tea_test.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: test
    nginx.ingress.kubernetes.io/ssl-redirect: false
  name: example-tea-svc-tea
  namespace: default
spec:
  rules:
    - host: "*.wc-0.example-cluster-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-m000.mon01.containers.appdomain.cloud"
      http:
        paths:
          - backend:
              serviceName: tea-svc
              servicePort: 8080
            path: /tea
  tls:
    - hosts:
        - "*.wc-0.example-cluster-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-m000.mon01.containers.appdomain.cloud"
      secretName: example-cluster-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-m000
